# domoticz-ble-passive-scan

./: .gitignore  .pre-commit-config.yaml  README.md  cfg.yml  pyproject.toml  scan_ble
